--- a/public/index.html
+++ b/public/index.html
@@ -17,31 +17,43 @@
 <!-- page content -->
     <div class="container-fluid">
         <div class="row">
-            <div id="promotion-carousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./assets/pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
-                        <div class="carousel-caption d-none d-md-block ">
-                            <h2>Be YOU</h2>
-                            <p>Rock Smagums.</p>
+            <div class="col-sm-12">
+                <div id="promotion-carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
+                            <div class="carousel-caption d-none d-md-block ">
+                                <h2>Be YOU</h2>
+                                <p>Rock Smagums.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/pics/bg-carousel-pic-2.jpg" class="d-block w-100" alt="streetwear promotional photo">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/pics/bg-carousel-pic-3.jpg" class="d-block w-100" alt="streetwear promotional photo">
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="./assets/pics/bg-carousel-pic-2.jpg" class="d-block w-100" alt="streetwear promotional photo">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#promotion-carousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#promotion-carousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#promotion-carousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#promotion-carousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                </button>
             </div>
+        </div>
+        <div class="row">
+            
         </div>
     </div>
 <!-- footer -->
     <footer div class="navbar navbar-dark bg-dark text-light">
         <h1>SMAGUMS</h1>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
