--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
                             <img src="./assets/pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
                             <div class="carousel-caption d-none d-md-block ">
                                 <h2>Be YOU</h2>
-                                <p>Rock Smagums.</p>
+                                <p>Rock Smagums</p>
+                                <button type="button" class="btn btn-light">Shop</button>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -44,7 +45,7 @@
             </div>
         </div>
         <div class="row">
-            
+
         </div>
     </div>
 <!-- footer -->
